--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <title>rubensalasdev.com</title>
 </head>
 <body>
-  <h1>¡Hola desde rubensalasdev.com!</h1>
-  <p>Este sitio está verificado para Google AdSense.</p>
+  <h1>Bienvenido a rubensalasdev.com</h1>
+  <p>Este sitio es parte de mi portafolio personal y alberga servicios para mis otros proyectos.</p>
+  <p>Actualmente sirve archivos como <code>ads.txt</code> para validar dominios en Google AdSense.</p>
+  <footer>
+    <p>&copy; 2025 Ruben Salas</p>
+  </footer>
 </body>
 </html>
