--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-adsense-account" content="ca-pub-3206576650912661">
   <title>rubensalasdev.com</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3206576650912661"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Bienvenido a rubensalasdev.com</h1>
