--- a/index.html
+++ b/index.html
@@ -2,17 +2,50 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-adsense-account" content="ca-pub-3206576650912661">
-  <title>rubensalasdev.com</title>
+  <title>Ruben Salas | Portafolio</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3206576650912661"
      crossorigin="anonymous"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 2rem;
+      line-height: 1.6;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+    header, footer {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    main {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      max-width: 800px;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    a {
+      color: #0066cc;
+    }
+  </style>
 </head>
 <body>
-  <h1>Bienvenido a rubensalasdev.com</h1>
-  <p>Este sitio es parte de mi portafolio personal y alberga servicios para mis otros proyectos.</p>
-  <p>Actualmente sirve archivos como <code>ads.txt</code> para validar dominios en Google AdSense.</p>
+  <header>
+    <h1>Bienvenido a rubensalasdev.com</h1>
+  </header>
+  <main>
+    <p>Este dominio forma parte del portafolio web de <strong>Ruben Salas</strong>, donde desarrollo proyectos personales y aplicaciones web.</p>
+    <p>Actualmente alberga archivos y servicios para mis sitios activos, incluyendo:</p>
+    <ul>
+      <li><a href="https://dragonballperu.rubensalasdev.com/" target="_blank">DragonBallPeru - Colección digital de figuras</a></li>
+    </ul>
+    <p>Este sitio también sirve para validar la propiedad del dominio en plataformas como Google AdSense.</p>
+  </main>
   <footer>
-    <p>&copy; 2025 Ruben Salas</p>
+    <p>&copy; 2025 Ruben Salas · Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
